# Brain-Tumor-Classification

./: .dockerignore  .gitignore  Dockerfile  README.md  data.dvc  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
models/: resnet18_metrics.csv
notebooks/: EDA.ipynb  evaluate_resnet.ipynb  train_baseline.ipynb
src/: api.py  dataset.py  evaluate.py  train.py  utils.py
tests/: test_api.py  test_evaluate.py
