[project]
name = "brain-tumor-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "dvc>=3.61.0",
    "fastapi>=0.116.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["data/", "models/", ".venv/", "dist/", "notebooks/"]

# Lint rules: basics + bug-prone patterns + import sorting + pyupgrade
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"